--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Drink 4 Fun</title>
+    <title>Drink 4 Party</title>
     <meta name="description" content="Party drinking game">
-    <meta name="keywords" content="Drinking game, party, friends, drink4fun, work-safe">
+    <meta name="keywords" content="Drinking game, party, friends, drink4party, work-safe">
     <meta name="author" content="Ebba">
     <meta charset="utf-8" />
-    <meta property="og:title" content="Drink 4 Fun" />
+    <meta property="og:title" content="Drink 4 Party" />
     <meta property="og:description" content="Party drinking game" />
-    <link rel="icon" href="/drink4fun-logo.png" />
+    <link rel="icon" href="/drink4party-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
